# varre

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
cmake/: ProjectOptions.cmake
docs/: post_app_migration_engine_cleanup.md
varre-app/: CMakeLists.txt
varre-app/src/: CMakeLists.txt
varre-app/src/app_core/: CMakeLists.txt  core.cpp
varre-app/src/include/varre/app/: core.hpp
varre-app/src/mesh_simple/: CMakeLists.txt  main.cpp
varre-app/src/simple_stress/: CMakeLists.txt  main.cpp
varre-app/src/triangle/: CMakeLists.txt  main.cpp
varre-assets/: CMakeLists.txt
varre-assets/codegen/: CMakeLists.txt
varre-assets/codegen/model_codegen/: CMakeLists.txt  main.cpp
varre-assets/codegen/shader_codegen/: CMakeLists.txt  main.cpp
varre-assets/models/: CMakeLists.txt
varre-assets/models/include/varre/assets/: models.hpp
varre-assets/models/src/: models_stub.cpp
varre-assets/models/stub/: models_generated.cpp.in  models_generated.hpp.in
varre-assets/models/tests/: CMakeLists.txt  model_loader.tests.cpp
varre-assets/shaders/: CMakeLists.txt
varre-assets/shaders/include/varre/assets/: shaders.hpp
varre-assets/shaders/slang/: example.slang  mesh_simple.slang
varre-assets/shaders/src/: shaders_stub.cpp
varre-assets/shaders/stub/: shaders_generated.cpp.in  shaders_generated.hpp.in
varre-assets/shaders/tests/: CMakeLists.txt  shader_codegen.tests.cpp
varre-assets/shaders/tests/fixtures/: invalid.spv  with_bindings.spv
varre-assets/src/: CMakeLists.txt
varre-assets/src/include/varre/assets/: assets.hpp
varre-engine/: CMakeLists.txt
varre-engine/src/: CMakeLists.txt  descriptors.cpp  engine.cpp  frame_loop.cpp  material_descriptors.cpp  surface.cpp  swapchain.cpp  upload_context.cpp
varre-engine/src/assets/: CMakeLists.txt  models.cpp  shader_objects.cpp  shaders.cpp  textures.cpp
varre-engine/src/core/: CMakeLists.txt  engine.cpp  engine_init_helpers.cpp  engine_init_helpers.hpp  surface.cpp  swapchain.cpp
varre-engine/src/descriptors/: CMakeLists.txt  descriptor_bindings.cpp  descriptors.cpp  material_descriptors.cpp
varre-engine/src/geometry/: CMakeLists.txt
varre-engine/src/include/varre/engine/: descriptor_bindings.hpp  descriptors.hpp  engine.hpp  errors.hpp  frame_loop.hpp  material_descriptors.hpp  models.hpp  pass_frame_loop.hpp  pass_mode.hpp  shader_objects.hpp  shaders.hpp  surface.hpp  swapchain.hpp  textures.hpp  upload_context.hpp
varre-engine/src/include/varre/engine/assets/: models.hpp  shader_objects.hpp  shaders.hpp  textures.hpp
varre-engine/src/include/varre/engine/core/: engine.hpp  errors.hpp  surface.hpp  swapchain.hpp
varre-engine/src/include/varre/engine/descriptors/: descriptor_bindings.hpp  descriptors.hpp  material_descriptors.hpp
varre-engine/src/include/varre/engine/render/: pass_frame_loop.hpp  pass_mode.hpp
varre-engine/src/include/varre/engine/sync/: frame_loop.hpp  upload_context.hpp
varre-engine/src/render_context/: CMakeLists.txt  pass_frame_loop.cpp  pass_mode.cpp
varre-engine/src/render_context/mesh_simple/: CMakeLists.txt
varre-engine/src/render_context/triangle/: CMakeLists.txt
varre-engine/src/sync/: CMakeLists.txt  frame_loop.cpp  upload_context.cpp
varre-engine/tests/: CMakeLists.txt  engine_runtime.tests.cpp
